# homelab-wrapped

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: connector-guide.md
docs/design/: Homelab Wrapped - Flow (standalone).html  Homelab Wrapped - Handoff.html  Homelab Wrapped - Summary + Export (standalone).html  Homelab Wrapped - Summary + Export Handoff.html
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_discover.py  test_docker_stats.py  test_events.py  test_facts.py  test_generic_csv.py  test_immich.py  test_jellyfin.py  test_network_allowlist.py  test_nextcloud.py  test_paperless.py  test_periods.py  test_pihole.py  test_schedule.py  test_settings.py  test_story.py  test_sync.py  test_web.py
tests/e2e/: conftest.py  test_player.py  test_settings_smoke.py
tests/fixtures/: events.csv  events.json  immich_search.json
tests/fixtures/snapshots/: year-2026.json
wrapped/: __init__.py  cli.py
wrapped/connectors/: __init__.py  base.py  docker_stats.py  generic_csv.py  immich.py  jellyfin.py  nextcloud.py  paperless.py  pihole.py
wrapped/core/: __init__.py  config.py  digest.py  events.py  periods.py  schedule.py  story.py  sync.py
wrapped/facts/: __init__.py
wrapped/web/: __init__.py  auth.py  discover.py  settings.py
wrapped/web/static/: canvas-bg.js  export.js  hw-bg.js  hw.css  player.js  story.css  style.css
wrapped/web/templates/: base.html  index.html  login.html  settings.html  setup.html  story.html
