[project]
name = "homelab-wrapped"
version = "0.1.0.dev0"
description = "Self-hosted, privacy-first recap generator for your homelab"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
wrapped = "wrapped.cli:main"

[project.urls]
Repository = "https://github.com/smbdev/homelab-wrapped"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wrapped"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
