[project]
name = "homelab-wrapped"
version = "0.10.0"
description = "Self-hosted, privacy-first recap generator for your homelab"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10,<4",
    "fastapi>=0.139.2",
    "jinja2>=3.1.6",
    "pyyaml>=6.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
wrapped = "wrapped.cli:main"

[project.urls]
Repository = "https://github.com/smbdev/homelab-wrapped"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "httpx>=0.28.1",
    "playwright>=1.61.0",
    "pytest-playwright>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wrapped"]

[tool.hatch.build.targets.wheel.force-include]
"config.example.yaml" = "wrapped/config.example.yaml"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["e2e: browser smoke tests (Playwright)"]
